--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-header {
+.cabecalho {
 background-color: #0E263D;
 color: white;
+display:flex;
+justify-content: space-around;
 }
 
 .cabecalho-imagem{
